[package]
name = "feder8"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1.0", features = ["full"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
jsonwebtoken = "9.0"
sha2 = "0.10"
hex = "0.4"
base64 = "0.21"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"

[dev-dependencies]
actix-rt = "2.7"
tokio-test = "0.4"
tempfile = "3.0"
testcontainers = "0.15"
testcontainers-modules = { version = "0.3", features = ["redis"] }
rand = "0.8"

